Use ImmutableMap instead of Map